--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,18 @@ aside {
     color: black;
 }
 
+.keunggulan-fitur {
+    font-size: large;
+    font-weight: lighter;
+}
+
 input[type=number] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
     border: 1px solid black;
-    border-radius: 4px;
+    border-radius: 5px;
     box-sizing: border-box;
     font-family: monospace;
     font-size: 14px;
@@ -55,6 +60,7 @@ input[type=number] {
 
 .hasilnya {
     text-align: center;
+    height: 350px;
 }
 
 .title-kedua {
