--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* Ini CSS */
-
 .main-title {
     text-align: center;
 }
@@ -58,17 +56,21 @@ input[type=number] {
     text-align: center;
   }
 
+.aside-kanan {
+    padding: 60px 60px;
+}
+
+  .title-kedua {
+    font-size: x-large;
+}
+
 .hasilnya {
     text-align: center;
     height: 350px;
 }
 
-.title-kedua {
-    font-size: x-large;
-}
-
 .brt-badan-lebih {
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 .hasil-247 {
