--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,8 @@ input[type=number] {
     border-radius: 4px;
 }
 
+@media only screen and (max-width: 480px) {
+    main {
+        flex-direction: column;
+    }
+}
